# secret-cosmos-abstraction

./: .env.mainnet  .env.sample  .env.testnet  .gitignore  Cargo.toml  Makefile  README.md  bun.lockb  bunfig.toml  docker-compose.yml  ibc.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
configs/: codes.json  contracts.json  ibc.json
contracts/factory/: Cargo.toml
contracts/factory/examples/: schema.rs
contracts/factory/schema/: execute_msg.json  handle_answer.json  query_msg.json
contracts/factory/src/: contract.rs  lib.rs  msg.rs  state.rs  structs.rs
contracts/gateway-registry/: Cargo.toml
contracts/gateway-registry/examples/: schema.rs
contracts/gateway-registry/schema/: instantiate_msg.json  query_answer.json  registry_execute_msg_for__inner_methods_and__cosmos_proxy_msg_for__abstraction_params_and__cosmos_auth_data_for__string_and__nullable__empty_and__empty.json  registry_query_msg_for__inner_queries_and__cosmos_auth_data_for__string_and__cosmos_account_query_for__nullable__empty_and__nullable__empty.json
contracts/gateway-registry/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/gateway-simple/: .gitignore  Cargo.toml
contracts/gateway-simple/examples/: schema.rs
contracts/gateway-simple/schema/: gateway_execute_msg_for__inner_methods.json  gateway_query_msg_for__inner_queries_and__cosmos_auth_data_for__string_and__nullable__empty.json  instantiate_msg.json
contracts/gateway-simple/src/: contract.rs  query.rs  state.rs
dockerbuilds/: Dockerfile.hermes  Dockerfile.secret  secret_init.sh
dockerbuilds/hermes/: config.toml  create-channel.sh  restore-keys.sh
src/: clients.ts  config.ts  contracts.ts  crypto.ts  env.ts  gateway.ts  ibc.ts  registry.ts  setup.ts  snip20.ts  temp_wallets.ts  types.ts  utils.ts
tests/: gateway.test.ts  ibc.test.ts  registry.test.ts  setup.test.ts  testSetup.ts
