[workspace]

members = [
    "contracts/*",
    "packages/*",
]

resolver = "2"

[workspace.package]
version    = "0.0.1"
edition    = "2021"
authors    = [ "Kromsten <s@noreply.megarock.labs>" ]
repository = "https://github.com/temp"


[workspace.dependencies]
cosmwasm-std     = { package = "secret-cosmwasm-std", version = "1.1.11", features = ["random", "stargate"] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
cosmwasm-schema  = { version = "2.0.2" }
secret-toolkit   = { version = "0.10.0", default-features = false, features = [
    "viewing-key", "crypto", "permit", "storage", "utils", "snip20"
]}
thiserror        = { version = "1.0.31" }
snafu            = { version = "0.8.2" }

bech32           = { version = "0.11.0", default-features = false, features = ["alloc"] }
sha2             = { version = "0.10.8", default-features = false } 
sdk              = { path = "packages/sdk", package="ca-sdk" }


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false